# AstroTrack

./: .gitignore  LICENSE  README.md  baseline_horizon.csv  environment.yml  pyproject.toml  requirements.txt
AstroTrack/: __init__.py  doppler_analysis.py  satcon_animate.py  satcon_properties.py
AstroTrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: LEO-catalogue.txt  REACH-Horizon.csv  test.py
