[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroTrack"
keywords = ["astronomy", "satellite", "radio", "signal", "analysis", "LEO", "skyfield"]
version = "0.1.0"
description = "A tool for analysing and investigating LEO satellite flyover occurrences with contamination in radio astronomy observational data."
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "Gabriella Mariam Zahra Rajpoot", email = "LetterToGabi@gmail.com" }
]
license = { text = "BSD 3-Clause License" }

dependencies = [
    "numpy>=1.25",
    "matplotlib>=3.5",
    "pandas>=2.0",
    "scipy>=1.10",
    "astropy>=7.0",
    "skyfield>=1.50",
    "h5py>=3.10",
    "tabulate>=0.9",
    "tqdm>=4.60"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=6.0"
]
